// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pathless route thunk called: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "url": "/first",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "FIRST",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/redirected",
      "search": "",
      "url": "/redirected",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "REDIRECTED",
  },
]
`;

exports[`pathless route thunk called: 1 - history_index 1`] = `1`;

exports[`pathless route thunk called: 1 - response 1`] = `
Object {
  "payload": "redirect_complete",
  "type": "REDIRECTED_COMPLETE",
}
`;

exports[`pathless route thunk called: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pathless route thunk called: 1 - routes - PATHLESS - onComplete 1`] = `1`;

exports[`pathless route thunk called: 1 - routes - PATHLESS - thunk 1`] = `1`;

exports[`pathless route thunk called: 1 - routes - REDIRECTED - onComplete 1`] = `1`;

exports[`pathless route thunk called: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/redirected",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "url": "/first",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "FIRST",
        },
      ],
      "hash": "",
      "index": 0,
      "key": "345678",
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "REDIRECTED",
    "universal": false,
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE - \\"redirect_complete\\"",
}
`;

exports[`pathless route thunk called: 1 - title 1`] = `"REDIRECTED"`;

exports[`pathless route thunk errors trigger onError: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "url": "/first",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "FIRST",
  },
]
`;

exports[`pathless route thunk errors trigger onError: 1 - history_index 1`] = `0`;

exports[`pathless route thunk errors trigger onError: 1 - response 1`] = `
Object {
  "error": [Error: fail],
  "type": "PATHLESS_ERROR",
}
`;

exports[`pathless route thunk errors trigger onError: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pathless route thunk errors trigger onError: 1 - routes - PATHLESS - onComplete 1`] = `0`;

exports[`pathless route thunk errors trigger onError: 1 - routes - PATHLESS - onError 1`] = `1`;

exports[`pathless route thunk errors trigger onError: 1 - routes - PATHLESS - thunk 1`] = `1`;

exports[`pathless route thunk errors trigger onError: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pathless route thunk errors trigger onError: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "error": [Error: fail],
    "errorType": "PATHLESS_ERROR",
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "key": "",
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "PATHLESS_ERROR",
}
`;

exports[`pathless route thunk errors trigger onError: 1 - title 1`] = `"FIRST"`;
